--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "boeingland_backend",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev -r tsconfig-paths/register src/main.ts",
     "start": "ts-node -r tsconfig-paths/register src/main",
+    "start:dev":"nodemon --watch src main.ts",
     "prisma:merge": "cat prisma/schema/**.prisma > prisma/schema.prisma",
     "prisma:format": "npx prisma format",
     "prisma:migrate": "npx prisma migrate dev --name init --schema prisma/schema.prisma",
-    "prisma:generate": "yarn pnpify prisma generate --schema=prisma/schema.prisma",
+    "prisma:generate": "npx prisma generate --schema=prisma/schema.prisma",
     "test": "jest --verbose",
     "test:trivia": "jest -- src/trivia",
     "test:twitter": "jest -- src/twitter",
@@ -18,13 +18,24 @@
   "dependencies": {
     "@prisma/client": "^4.13.0",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@yarnpkg/pnpify": "^4.0.0-rc.43",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fp-ts": "^2.14.0",
     "io-ts": "^2.2.20",
     "pg": "^8.10.0",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.1",
+    "@types/node": "^20.1.0",
+    "@types/pg": "^8.6.6",
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
 }
